--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -14,6 +14,10 @@
 
 <link rel="stylesheet" href="../Content/chosen/chosen.css" />
 <script type="text/javascript" src="../Content/chosen/chosen.jquery.js"></script>
+<meta property="og:title" content="@Model.FirstOrDefault().QuestionText" />
+<meta property="og:url" content="@ConfigurationSettings.AppSettings["askMiraiLink"]/Patients/PatientQuestionDetails?questionid=@Model.FirstOrDefault().QuestionId">
+<meta property="og:image" content="@ConfigurationSettings.AppSettings["askMiraiLink"]/Content/image/logo.png" />
+<meta property="og:description" content="@Model.FirstOrDefault().AnswerText" />
 <div class="custom-central-div">
     <div class="row-fluid">
         <div class="span12">
