--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -2,6 +2,10 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Healthcare now more accessible and convenient at MiraiConsult" />
+    <meta property="og:title" content="MiraiConsult" />
+    <meta property="og:image" content="http://demo.vertisinfotech.com:7171/askMirai/app/Resources/image/logo.png" />
+
     <title>Mirai Consult ™ </title>
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
     <link rel="stylesheet" href="../Scripts/google-code-prettify/prettify.css" />
