--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -4219,6 +4219,6 @@ table.cust-table {
 .doc-detail-word-break {
     word-wrap: break-word;
 }
-.bg-lightgreen {
-    background-color: #EEEFCF !important;
+.bg-white {
+    background-color: #ffffff !important;
 }
