--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -4,26 +4,29 @@
 
 <!DOCTYPE html>
 
-<html class="bg-lightgreen">
+<html class="bg-white">
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ContactDetail</title>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-    <script src="~/Scripts/jquery-ui-1.10.0.custom.min.js"></script>
+    <script src="~/Content/js/jquery-ui.min.js"></script>
     <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
-<body class="bg-lightgreen">
-    <div class="row-fluid center_align bg-lightgreen" style="height:80px;">
-        <div class="span12">
-            <h4 id="ContactDetail">
-                To book an appointment call on 8888888
-            </h4>
+<body class="bg-white">
+    <div id="bookappt" class="row-fluid center_align bg-white " style="height:34px;">
+        <div class="answer-title">
+            Book Appointment
         </div>
     </div>
-    <div class="row-fluid center_align bg-lightgreen">
+    <div class="row-fluid center_align bg-white" style="height:60px;">
+        <div class="answer-title">
+            To book an appointment call on 8888888
+        </div>
+    </div>
+    <div class="row-fluid center_align bg-white">
         <div class="span12">
-            <button class="btn thanx cust-red "  style="width:67px" onclick="closeDialog(); return false;">OK</button>
+            <button class="btn thanx cust-red " style="padding:4px 30px;" onclick="closeDialog(); return false;">OK</button>
         </div>
     </div>
 </body>
