--- a/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/ContactDetail.cshtml
@@ -14,19 +14,21 @@
     <link href="~/Content/custom.css" rel="stylesheet" />
 </head>
 <body class="bg-white">
-    <div id="bookappt" class="row-fluid center_align bg-white " style="height:34px;">
-        <div class="answer-title">
-            Book Appointment
+    <div class="bg-white doc-detail-word-break">
+        <div id="bookappt" class="row-fluid center_align bg-white ">
+            <div class="span12 answer-title doc-detail-word-break">
+                Book Appointment
+            </div>
         </div>
-    </div>
-    <div class="row-fluid center_align bg-white" style="height:60px;">
-        <div class="answer-title">
-            To book an appointment call on 8888888
+        <div class="row-fluid center_align bg-white">
+            <div class="span12 answer-title doc-detail-word-break">
+                To book an appointment call on 8888888
+            </div>
         </div>
-    </div>
-    <div class="row-fluid center_align bg-white">
-        <div class="span12">
-            <button class="btn thanx cust-red " style="padding:4px 30px;" onclick="closeDialog(); return false;">OK</button>
+        <div class="row-fluid center_align bg-white">
+            <div class="span12">
+                <button class="btn thanx cust-red " style="padding:4px 30px;" onclick="closeDialog(); return false;">OK</button>
+            </div>
         </div>
     </div>
 </body>
