--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -155,7 +155,7 @@
                                                         isendorse = Convert.ToBoolean(@item.IsEndorse);
                                                         if (isendorse == false)
                                                         {
-                                                            <a class='custom-link' onclick="return endorseToDoctor(@(Convert.ToInt32(Session["UserId"])),'@(item.AnswerId)',@("this"),' @(item.LastName)','@(item.MobileNo)','@(item.Email)','@(Session["UserFullName"])','@(item.QuestionText)','@(item.EndorseCount)')"><b>Want to endorse?</b></a>
+                                                            <a class='custom-link' onclick="return endorseToDoctor(@(Convert.ToInt32(Session["UserId"])),'@(item.AnswerId)',@("this"),' @(item.LastName)','@(item.MobileNo)','@(item.Email)','@(Session["UserFullName"])','@HttpUtility.UrlEncode(Convert.ToString(item.QuestionText)) ','@(item.EndorseCount)')"><b>Want to endorse?</b></a>
                                                         }
                                                         else
                                                         {
