--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script type="text/javascript" src="~/Content/js/utility.js"></script>
-@using (Html.BeginForm(Html.BeginForm("DoctorQuestionDetails", "Questions", FormMethod.Post, new { @encType = "multipart/form-data", autocomplete = "off" })))
+@using (Html.BeginForm(Html.BeginForm("DoctorQuestionDetails", "Questions", FormMethod.Post, new { @encType = "multipart/form-data", autocomplete = "off", novalidate="true" })))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
