--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -137,7 +137,7 @@
                                         }
                                         count++;
                                     }
-                                    @if(Model.locations.Count > 2)
+                                    @if(Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.details != null && Model.details.Count > 0)))
                                     { 
                                         <hr class="doc-details-hr" />
                                     }
@@ -236,7 +236,7 @@
                                         }
                                         count++;
                                     }
-                                    @if(Model.locations.Count > 2)
+                                    @if(Model.locations.Count > 0 && ((Model.specialities != null && Model.specialities.Count > 0) || (Model.details != null && Model.details.Count > 0)))
                                     { 
                                         <hr class="doc-details-hr" />
                                     }
