--- a/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/doctorsPublicProfile.cshtml
@@ -17,21 +17,22 @@
             <div>
                 <div class='row-fluid'>
                     <div class="span12">
+                        <div class="doc-profile-title">
+                            Dr. @(Model.FirstName + " " + Model.LastName)
+                        </div>
                         <div class="doc-details-div">
                             @{
-                                string qualification = ", ";
+                                string qualification = "";
                                 if (Model.qualification != null && Model.qualification.Count > 0)
                                 {
                                     foreach (var q in Model.qualification)
                                     {
-                                        qualification += q.Degree.Trim() + ", ";
+                                        qualification += q.Degree + ",";
                                     }
                                     qualification = qualification.TrimEnd(',');
+                                    <span class="loc-label">Qualification:</span>@qualification
                                 }
                             }
-                        </div>
-                        <div class="inline">
-                            <div class="doc-profile-title position-left">Dr. @(Model.FirstName + " " + Model.LastName) </div><div class="position-left paddig-top"> @qualification.TrimEnd(',')</div>
                         </div>
                     </div>
                 </div>
