--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.css" />
       <link rel="stylesheet" href="bower_components/fullcalendar/dist/fullcalendar.css"/>
       <link rel="stylesheet" href="css/calender/calendarAppointmentBook.css" />
+      <link type="text/css" rel="stylesheet" href="css/lib/angular-flash.min.css" />
       <!-- jquery, moment, and angular have to get included before fullcalendar -->
       <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -19,6 +20,7 @@
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
       <script src="javascript/calender/calendarAppointmentBook.js" type="text/javascript"></script>
       <script src="javascript/posts/calendarAppointmentBookModal.js" type="text/javascript"></script>
+      <script src="javascript/lib/angular-flash.min.js"></script>
       <!-- <link href="css/calender/font-awesome.css" rel="stylesheet"> -->
       <script type="text/ng-template" id="appointmentBooking.html">
         <div class="modal-header">
@@ -201,12 +203,12 @@
           <button class="btn btn-danger" ng-click="delete()">Delete</button>
         </div>
       </script>
-
+      <div flash-message="5000" ></div>
       <!-- <div ui-calendar="calendarOptions" ng-model="eventSources" calendar="myCalendar"></div> -->
       <!-- <div class="alert-success" ng-show="alertMessage != undefined && alertMessage != ''">
         <h4>{{alertMessage}}</h4>
       </div> -->
-      <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
+      <div ui-calendar="uiConfig.calendar" ng-model="eventSources" calendar="appointmentBookingCalendar" id="appointmentBookingCalendar"></div>
     </div>
   </div>
 </head>
