--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -28,7 +28,7 @@
         <form class="form-inline" role="form">
           <div class="form-group">
             <label for="doctorName" class="doctor-location-label">Doctor Name: *</label>
-            <select ng-model="doctorId" ng-options="value.id as value.name group by value.group for value in doctors" convert-to-number ng-change="getLocations(doctorId)">
+            <select ng-model="doctorId" ng-options="value.id as value.firstname + ' ' + value.lastname group by value.group for value in doctors" convert-to-number ng-change="getLocations(doctorId)">
             </select>
           </div>
           <div class="form-group">
