--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -99,9 +99,11 @@
                     <label class="control-label col-lg-1" for="name">Pre-pay: </label>
                     <div class="col-lg-8">
                       <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected">
-                      <i class="fa fa-inr"></i>
-                      <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
-                      <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
+                      <span ng-show="paymentSelected">
+                        <i class="fa fa-inr"></i>
+                        <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
+                        <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
+                      </span>
                     </div>
                   </div>
                   <!-- Patient div ends here -->
@@ -187,9 +189,12 @@
                     <label class="control-label col-lg-1" for="name">Pre-pay: </label>
                     <div class="col-lg-8">
                       <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected">
-                      <i class="fa fa-inr"></i>
-                      <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
-                      <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
+                      <span ng-show="paymentSelected">
+                        <i class="fa fa-inr prepay-symbol-green" ng-show="show_green"></i>
+                        <i class="fa fa-inr prepay-symbol-red" ng-show="show_red"></i>
+                        <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
+                        <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
+                      </span>
                     </div>
                   </div>
                   <!-- Patient div ends here -->
