--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -191,7 +191,7 @@
                     <div class="col-lg-8">
                       <input id="prepay" class="checkbox-inline" type="checkbox" name="need_pre_pay" value="" ng-model="paymentSelected">
                       <span ng-show="paymentSelected">
-                        <i class="fa fa-inr" ng-class="{'prepay-symbol-green': show_green, 'prepay-symbol-red': !show_green}"></i>
+                        <i class="fa fa-inr" ng-class="check_if_paid"></i>
                         <input type="text" class="form-control pay-amount" placeholder="0.0" maxlength="8" ng-model="prepayAmount"> by
                         <input type="text" class="form-control pay-amount-by" ng-model="prepayAmountBy">
                       </span>
