--- a/public/css/posts/BookAppointment.css
+++ b/public/css/posts/BookAppointment.css
@@ -1,55 +1,33 @@
-.modal {
-  margin: auto;
-  bottom: inherit;
-  left: 0%;
-}
-
-.modal-dialog {
-  width: auto;
-  margin: 0px;
-  border: none;
-}
-
-.modal-backdrop {
-  bottom:0;
-}
-
-.modal-header {
-  padding: 1%;
-}
-
-.modal-title {
-  text-align: center;
-}
-
-.form-control {
-  height: 5% !important;
-}
-
 .pay-amount {
   width: 15%;
+  display: initial;
 }
 
 .pay-amount-by {
   width: 70%;
+  display: initial;
 }
 
 .pay-amount-by-non-edit {
-  width: 69%;
+  width: 70%;
+  display: initial;
 }
 
-.doctor-location-label {
-  font-size: 1em;
-  font-weight: 500;
-  font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+#directives-calendar {
+  width: 90%;
+  margin: 5%;
 }
 
-.doctor-location-select{
-  min-width: 160px;
+#doctor-location {
+  margin: 1%;
 }
 
 .validation-msg-color {
   color: red;
+}
+
+.doctor-location-select{
+  min-width: 160px;
 }
 
 /*.fc-agendaWeek-view tr {
